--- a/index.html
+++ b/index.html
@@ -84,6 +84,68 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
+  <style>
+/* Animações para os quadros */
+@keyframes floatUpDown {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+}
+
+@keyframes floatLeftRight {
+  0%, 100% { transform: translateX(0); }
+  50% { transform: translateX(15px); }
+}
+
+@keyframes floatCombined {
+  0%, 100% { transform: translate(0, 0); }
+  25% { transform: translate(10px, -10px); }
+  50% { transform: translate(-10px, 10px); }
+  75% { transform: translate(10px, 10px); }
+}
+
+.animate-float-up-down {
+  animation: floatUpDown 3s ease-in-out infinite;
+}
+
+.animate-float-left-right {
+  animation: floatLeftRight 3s ease-in-out infinite;
+}
+
+.animate-float-combined {
+  animation: floatCombined 4s ease-in-out infinite;
+}
+
+.animation-delay-1000 {
+  animation-delay: 1s;
+}
+
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+
+.animation-delay-3000 {
+  animation-delay: 3s;
+}
+
+.group:hover {
+  animation-play-state: paused;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-slideDown {
+  animation: slideDown 0.3s ease-out forwards;
+}
+</style>
 </head>
 <body class="bg-gray-50 text-gray-900 antialiased">
   <div id="root"></div>
